improve error handling

--- a/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb
@@ -683,10 +683,11 @@
         "        data = json.load(f)\n",
         "\n",
         "    # Update the SeriesNumber and SeriesDescription fields\n",
-        "    data[\"SeriesNumber\"] = str(int(series_number) * 100)\n",
-        "    data[\n",
-        "        \"SeriesDescription\"\n",
-        "    ] = f\"TotalSegmentator(v1.5.6) Segmentation of Series {series_number}\"\n",
+        "    if series_number:\n",
+        "        data[\"SeriesNumber\"] = str(int(series_number) * 100)\n",
+        "        data[\"SeriesDescription\"] = f\"TotalSegmentator(v1.5.6) Segmentation of Series {series_number}\"\n",
+        "    else:\n",
+        "        data[\"SeriesDescription\"] = \"TotalSegmentator(v1.5.6) Segmentation\"\n",
         "\n",
         "    # Attempt to remove the directory for the series if it exists\n",
         "    try:\n",
@@ -759,7 +760,7 @@
       },
       "outputs": [],
       "source": [
-        "def verify_dicom_seg_creation(series_id: str):\n",
+        "def dicom_seg_creation_errors(series_id: str):\n",
         "    \"\"\"\n",
         "    Verify if the DICOM segmentation was successful for a given series.\n",
         "\n",
@@ -775,10 +776,12 @@
         "    try:\n",
         "        # Check if the output file exists\n",
         "        assert os.path.exists(output_file_path)\n",
+        "        return False\n",
         "    except AssertionError:\n",
         "        # If the output file does not exist, log an error\n",
         "        with open(\"itkimage2segimage_error_file.txt\", \"a\") as f:\n",
-        "            f.write(f\"Error: itkimage2segimage failed for series {series_id}\\n\")\n"
+        "            f.write(f\"Error: itkimage2segimage failed for series {series_id}\\n\")\n",
+        "        return True"
       ]
     },
     {
@@ -1227,7 +1230,8 @@
         "        + \" Measurements of series \"\n",
         "        + str(series_number)\n",
         "    )\n",
-        "    inputMetadata[\"SeriesNumber\"] = str(1 + int(series_number) * 100)\n",
+        "    if series_number:\n",
+        "        inputMetadata[\"SeriesNumber\"] = str(1 + int(series_number) * 100)\n",
         "    inputMetadata[\"InstanceNumber\"] = \"1\"\n",
         "\n",
         "    inputMetadata[\"compositeContext\"] = [seg_file]\n",
@@ -1544,96 +1548,100 @@
         "        itkimage2segimage_time = time.time() - start_time\n",
         "\n",
         "        # Verify DICOM segmentation creation\n",
-        "        verify_dicom_seg_creation(series_id)\n",
+        "        if not dicom_seg_creation_errors(series_id):\n",
+        "            start_time= time.time()\n",
+        "            # Setup and trigger extraction of radiomics features for all labels\n",
+        "            setup_and_trigger_extraction_of_radiomics_features_all_labels(series_id)\n",
+        "            radiomics_time = time.time()- start_time\n",
         "\n",
-        "        start_time= time.time()\n",
-        "        # Setup and trigger extraction of radiomics features for all labels\n",
-        "        setup_and_trigger_extraction_of_radiomics_features_all_labels(series_id)\n",
-        "        radiomics_time = time.time()- start_time\n",
+        "            # Verify radiomics feature extraction\n",
+        "            verify_radiomics_extraction(series_id)\n",
         "\n",
-        "        # Verify radiomics feature extraction\n",
-        "        verify_radiomics_extraction(series_id)\n",
+        "            # Record the start time\n",
+        "            start_time = time.time()\n",
         "\n",
-        "        # Record the start time\n",
-        "        start_time = time.time()\n",
+        "            # Post-process radiomics features\n",
+        "            radiomics_features = post_process_radiomics_features(series_id)\n",
         "\n",
-        "        # Post-process radiomics features\n",
-        "        radiomics_features = post_process_radiomics_features(series_id)\n",
+        "            # Read the DICOM segmentation file\n",
+        "            seg_dcm = dcmread(f\"itkimage2segimage/{series_id}/{series_id}.dcm\")\n",
         "\n",
-        "        # Read the DICOM segmentation file\n",
-        "        seg_dcm = dcmread(f\"itkimage2segimage/{series_id}/{series_id}.dcm\")\n",
+        "            # Get the SOPInstanceUID of the segmentation\n",
+        "            SOPInstanceUID_seg = seg_dcm.SOPInstanceUID\n",
         "\n",
-        "        # Get the SOPInstanceUID of the segmentation\n",
-        "        SOPInstanceUID_seg = seg_dcm.SOPInstanceUID\n",
+        "            # Define the segmentation file and DICOM directory\n",
+        "            seg_file = f\"{series_id}.dcm\"\n",
+        "            dicom_directory = f\"idc_data/{series_id}\"\n",
         "\n",
-        "        # Define the segmentation file and DICOM directory\n",
-        "        seg_file = f\"{series_id}.dcm\"\n",
-        "        dicom_directory = f\"idc_data/{series_id}\"\n",
-        "\n",
-        "        # Define the segment code mapping DataFrame and feature code mapping DataFrames\n",
-        "        segments_code_mapping_df = totalsegmentator_segments_code_mapping_df\n",
-        "        shape_features_code_mapping_df = (\n",
-        "            totalsegmentator_radiomics_features_code_mapping_df[\n",
+        "            # Define the segment code mapping DataFrame and feature code mapping DataFrames\n",
+        "            segments_code_mapping_df = totalsegmentator_segments_code_mapping_df\n",
+        "            shape_features_code_mapping_df = (\n",
         "                totalsegmentator_radiomics_features_code_mapping_df[\n",
-        "                    \"pyradiomics_feature_class\"\n",
+        "                    totalsegmentator_radiomics_features_code_mapping_df[\n",
+        "                        \"pyradiomics_feature_class\"\n",
+        "                    ]\n",
+        "                    == \"shape\"\n",
         "                ]\n",
-        "                == \"shape\"\n",
-        "            ]\n",
-        "        )\n",
-        "        first_order_features_code_mapping_df = (\n",
-        "            totalsegmentator_radiomics_features_code_mapping_df[\n",
+        "            )\n",
+        "            first_order_features_code_mapping_df = (\n",
         "                totalsegmentator_radiomics_features_code_mapping_df[\n",
-        "                    \"pyradiomics_feature_class\"\n",
+        "                    totalsegmentator_radiomics_features_code_mapping_df[\n",
+        "                        \"pyradiomics_feature_class\"\n",
+        "                    ]\n",
+        "                    == \"firstorder\"\n",
         "                ]\n",
-        "                == \"firstorder\"\n",
-        "            ]\n",
-        "        )\n",
+        "            )\n",
         "\n",
-        "        # Create structured report meta-JSON for shape features\n",
-        "        create_structured_report_metajson_for_features(\n",
-        "            series_id,\n",
-        "            series_number,\n",
-        "            SOPInstanceUID_seg,\n",
-        "            seg_file,\n",
-        "            dicom_directory,\n",
-        "            segments_code_mapping_df,\n",
-        "            shape_features_code_mapping_df,\n",
-        "            radiomics_features,\n",
-        "        )\n",
+        "            # Create structured report meta-JSON for shape features\n",
+        "            create_structured_report_metajson_for_features(\n",
+        "                series_id,\n",
+        "                series_number,\n",
+        "                SOPInstanceUID_seg,\n",
+        "                seg_file,\n",
+        "                dicom_directory,\n",
+        "                segments_code_mapping_df,\n",
+        "                shape_features_code_mapping_df,\n",
+        "                radiomics_features,\n",
+        "            )\n",
         "\n",
-        "        # Create structured report meta-JSON for first order features\n",
-        "        create_structured_report_metajson_for_features(\n",
-        "            series_id,\n",
-        "            series_number,\n",
-        "            SOPInstanceUID_seg,\n",
-        "            seg_file,\n",
-        "            dicom_directory,\n",
-        "            segments_code_mapping_df,\n",
-        "            first_order_features_code_mapping_df,\n",
-        "            radiomics_features,\n",
-        "        )\n",
+        "            # Create structured report meta-JSON for first order features\n",
+        "            create_structured_report_metajson_for_features(\n",
+        "                series_id,\n",
+        "                series_number,\n",
+        "                SOPInstanceUID_seg,\n",
+        "                seg_file,\n",
+        "                dicom_directory,\n",
+        "                segments_code_mapping_df,\n",
+        "                first_order_features_code_mapping_df,\n",
+        "                radiomics_features,\n",
+        "            )\n",
         "\n",
-        "        # Calculate the time taken to generate structured reports\n",
-        "        structured_reports_generation_time = time.time() - start_time\n",
-        "        print(\n",
-        "            f\"Structured Reports Generated in {structured_reports_generation_time} seconds.\\n\"\n",
-        "        )\n",
+        "            # Calculate the time taken to generate structured reports\n",
+        "            structured_reports_generation_time = time.time() - start_time\n",
+        "            print(\n",
+        "                f\"Structured Reports Generated in {structured_reports_generation_time} seconds.\\n\"\n",
+        "            )\n",
         "\n",
-        "        # Record the start time\n",
-        "        start_time = time.time()\n",
+        "            # Record the start time\n",
+        "            start_time = time.time()\n",
         "\n",
-        "        # Compress the files\n",
-        "        compress_files(series_id)\n",
+        "            # Compress the files\n",
+        "            compress_files(series_id)\n",
         "\n",
-        "        # Calculate the time taken to archive the files\n",
-        "        archiving_time = time.time() - start_time\n",
+        "            # Calculate the time taken to archive the files\n",
+        "            archiving_time = time.time() - start_time\n",
         "\n",
-        "        log = pd.DataFrame({\"SeriesInstanceUID\": [series_id]})\n",
-        "        log[\"itkimage2segimage_time\"] = itkimage2segimage_time\n",
-        "        log[\"radiomics_time\"] = radiomics_time\n",
-        "        log[\"archiving_time\"] = archiving_time\n",
-        "        log[\"structuredReportsGenerationTime\"] = structured_reports_generation_time\n",
-        "\n",
+        "            log = pd.DataFrame({\"SeriesInstanceUID\": [series_id]})\n",
+        "            log[\"itkimage2segimage_time\"] = itkimage2segimage_time\n",
+        "            log[\"radiomics_time\"] = radiomics_time\n",
+        "            log[\"archiving_time\"] = archiving_time\n",
+        "            log[\"structuredReportsGenerationTime\"] = structured_reports_generation_time\n",
+        "        else:\n",
+        "            log = pd.DataFrame({\"SeriesInstanceUID\": [series_id]})\n",
+        "            log[\"itkimage2segimage_time\"] = itkimage2segimage_time\n",
+        "            log[\"radiomics_time\"] = 0\n",
+        "            log[\"archiving_time\"] = 0\n",
+        "            log[\"structuredReportsGenerationTime\"] = 0\n",
         "    else:\n",
         "        log = pd.DataFrame({\"SeriesInstanceUID\": [series_id]})\n",
         "        log[\"itkimage2segimage_time\"] = 0\n",
