--- a/workflows/TotalSegmentator/Notebooks/downloadDicomAndConvertAndInferenceTotalSegmentatorNotebook.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/downloadDicomAndConvertAndInferenceTotalSegmentatorNotebook.ipynb
@@ -632,26 +632,27 @@
         "                except subprocess.CalledProcessError:\n",
         "                    print(\"Error: Failed to move files using both commands\")\n",
         "\n",
-        "            check_total_segmentator_errors(series_id)\n",
+        "            if not check_total_segmentator_errors(series_id):\n",
         "\n",
-        "            shutil.move(\n",
-        "                f\"Inference/{series_id}/segmentations.nii\",\n",
-        "                f\"Inference/{series_id}/{series_id}.nii\",\n",
-        "            )\n",
-        "\n",
-        "            start_time = time.time()\n",
-        "            subprocess.run(\n",
-        "                [\n",
-        "                    \"lz4\",\n",
-        "                    \"--rm\",\n",
+        "                shutil.move(\n",
+        "                    f\"Inference/{series_id}/segmentations.nii\",\n",
         "                    f\"Inference/{series_id}/{series_id}.nii\",\n",
-        "                    f\"Inference/{series_id}/{series_id}.nii.lz4\",\n",
-        "                ],\n",
-        "                check=True,\n",
-        "            )\n",
+        "                )\n",
         "\n",
-        "            archiving_time = time.time() - start_time\n",
+        "                start_time = time.time()\n",
+        "                subprocess.run(\n",
+        "                    [\n",
+        "                        \"lz4\",\n",
+        "                        \"--rm\",\n",
+        "                        f\"Inference/{series_id}/{series_id}.nii\",\n",
+        "                        f\"Inference/{series_id}/{series_id}.nii.lz4\",\n",
+        "                    ],\n",
+        "                    check=True,\n",
+        "                )\n",
         "\n",
+        "                archiving_time = time.time() - start_time\n",
+        "            else:\n",
+        "                archiving_time = 0  \n",
         "        else:\n",
         "            total_segmentator_time = 0\n",
         "            archiving_time = 0\n",
