--- a/workflows/TotalSegmentator/Notebooks/endToEndTotalSegmentatorNotebook.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/endToEndTotalSegmentatorNotebook.ipynb
@@ -3,15 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/CloudSegmentator/blob/main/workflows/TotalSegmentator/Notebooks/endToEndTotalSegmentatorNotebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "EHS1DmzV54av"
       },
       "source": [
@@ -286,7 +277,7 @@
       "source": [
         "### **Initialize IDC Client**\n",
         "\n",
-        "we use idc-client pypi package to handle downloading data from IDC. \n",
+        "we use idc-client pypi package to handle downloading data from IDC.\n",
         "In this notebook, we are using version 0.2.8 which contains the index from idc version 17\n",
         "\n",
         "Learn more about idc-index at ttps://github.com/ImagingDataCommons/idc-index"
@@ -328,18 +319,7 @@
       "source": [
         "if 'google.colab' in sys.modules:\n",
         "  SeriesInstanceUIDs=[\n",
-        "                      '1.3.6.1.4.1.14519.5.2.1.7009.9004.100143549999116733615345241533',\n",
-        "                      '1.3.6.1.4.1.14519.5.2.1.7009.9004.100148350742920339334061834697',\n",
-        "                      '1.3.6.1.4.1.14519.5.2.1.7009.9004.100241427395754063917290539621',\n",
-        "                      '1.3.6.1.4.1.14519.5.2.1.7009.9004.100266844261017577841946689119',\n",
-        "                      '1.3.6.1.4.1.14519.5.2.1.7009.9004.100554983367710060268444607770',\n",
-        "                      '1.3.6.1.4.1.14519.5.2.1.7009.9004.100609092457306482866656779396',\n",
-        "                      '1.3.6.1.4.1.14519.5.2.1.7009.9004.100766949446324115207263771273',\n",
-        "                      '1.3.6.1.4.1.14519.5.2.1.7009.9004.100807683971079396484581858934',\n",
-        "                      '1.3.6.1.4.1.14519.5.2.1.7009.9004.100898243941555041874482639283',\n",
-        "                      '1.3.6.1.4.1.14519.5.2.1.7009.9004.100962349324934756610763981593',\n",
-        "                      '1.3.6.1.4.1.14519.5.2.1.7009.9004.100993923831797845405183790593',\n",
-        "                      '1.3.6.1.4.1.14519.5.2.1.7009.9004.101126369092366339550409924127'\n",
+        "                      '1.3.6.1.4.1.14519.5.2.1.2932.1975.256749960592074016578641330855'\n",
         "                      ]"
       ]
     },
@@ -511,7 +491,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "jrqdTkCg9Jqg"
+      },
       "outputs": [],
       "source": [
         "def is_series_greater_than_800_slices(series_id: str) -> bool:\n",
@@ -741,10 +723,11 @@
         "        data = json.load(f)\n",
         "\n",
         "    # Update the SeriesNumber and SeriesDescription fields\n",
-        "    data[\"SeriesNumber\"] = str(int(series_number) * 100)\n",
-        "    data[\n",
-        "        \"SeriesDescription\"\n",
-        "    ] = f\"TotalSegmentator(v1.5.6) Segmentation of Series {series_number}\"\n",
+        "    if series_number:\n",
+        "        data[\"SeriesNumber\"] = str(int(series_number) * 100)\n",
+        "        data[\"SeriesDescription\"] = f\"TotalSegmentator(v1.5.6) Segmentation of Series {series_number}\"\n",
+        "    else:\n",
+        "        data[\"SeriesDescription\"] = \"TotalSegmentator(v1.5.6) Segmentation\"\n",
         "\n",
         "    # Attempt to remove the directory for the series if it exists\n",
         "    try:\n",
@@ -805,7 +788,7 @@
       },
       "outputs": [],
       "source": [
-        "def verify_dicom_seg_creation(series_id: str):\n",
+        "def dicom_seg_creation_errors(series_id: str):\n",
         "    \"\"\"\n",
         "    Verify if the DICOM segmentation was successful for a given series.\n",
         "\n",
@@ -821,10 +804,12 @@
         "    try:\n",
         "        # Check if the output file exists\n",
         "        assert os.path.exists(output_file_path)\n",
+        "        return False\n",
         "    except AssertionError:\n",
         "        # If the output file does not exist, log an error\n",
         "        with open(\"itkimage2segimage_error_file.txt\", \"a\") as f:\n",
-        "            f.write(f\"Error: itkimage2segimage failed for series {series_id}\\n\")\n"
+        "            f.write(f\"Error: itkimage2segimage failed for series {series_id}\\n\")\n",
+        "        return True"
       ]
     },
     {
@@ -942,7 +927,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "6hVYZDLW9Jqk"
+      },
       "outputs": [],
       "source": [
         "def log_failed_to_save_raw_radiomics_features(series_id: str) -> None:\n",
@@ -1270,7 +1257,8 @@
         "        + \" Measurements of series \"\n",
         "        + str(series_number)\n",
         "    )\n",
-        "    inputMetadata[\"SeriesNumber\"] = str(1 + int(series_number) * 100)\n",
+        "    if series_number:\n",
+        "        inputMetadata[\"SeriesNumber\"] = str(1 + int(series_number) * 100)\n",
         "    inputMetadata[\"InstanceNumber\"] = \"1\"\n",
         "\n",
         "    inputMetadata[\"compositeContext\"] = [seg_file]\n",
@@ -1628,84 +1616,94 @@
         "                except subprocess.CalledProcessError:\n",
         "                    print(\"Error: Failed to move files using both commands\")\n",
         "\n",
-        "            check_total_segmentator_errors(series_id)\n",
-        "            \n",
-        "            !mv Inference/{series_id}/segmentations.nii Inference/{series_id}/{series_id}.nii\n",
+        "            if not check_total_segmentator_errors(series_id):\n",
         "\n",
-        "            #dicomseg\n",
-        "            start_time = time.time()\n",
-        "            dicom_seg_config(series_id, series_number)\n",
-        "            create_dicom_seg_dcmqi(series_id)\n",
-        "            verify_dicom_seg_creation(series_id)\n",
-        "            itkimage2segimage_time = time.time() - start_time\n",
+        "                !mv Inference/{series_id}/segmentations.nii Inference/{series_id}/{series_id}.nii\n",
         "\n",
-        "            #radiomics features\n",
-        "            start_time = time.time()\n",
-        "            setup_and_trigger_extraction_of_radiomics_features_all_labels(series_id)\n",
-        "            verify_radiomics_extraction(series_id)\n",
-        "            radiomics_features = post_process_radiomics_features(series_id)\n",
-        "            radiomics_time = time.time() - start_time\n",
+        "                #dicomseg\n",
+        "                start_time = time.time()\n",
+        "                dicom_seg_config(series_id, series_number)\n",
+        "                create_dicom_seg_dcmqi(series_id)\n",
+        "                itkimage2segimage_time = time.time() - start_time\n",
         "\n",
-        "            #structured reports\n",
-        "            start_time = time.time()\n",
-        "            seg_dcm = dcmread(f\"itkimage2segimage/{series_id}/{series_id}.dcm\")\n",
-        "            SOPInstanceUID_seg = seg_dcm.SOPInstanceUID\n",
-        "            seg_file = f\"{series_id}.dcm\"\n",
-        "            dicom_directory = f\"idc_data/{series_id}\"\n",
-        "            segments_code_mapping_df = totalsegmentator_segments_code_mapping_df\n",
-        "            shape_features_code_mapping_df = (\n",
-        "                totalsegmentator_radiomics_features_code_mapping_df[\n",
-        "                    totalsegmentator_radiomics_features_code_mapping_df[\n",
-        "                        \"pyradiomics_feature_class\"\n",
-        "                    ]\n",
-        "                    == \"shape\"\n",
-        "                ]\n",
-        "            )\n",
-        "            first_order_features_code_mapping_df = (\n",
-        "                totalsegmentator_radiomics_features_code_mapping_df[\n",
-        "                    totalsegmentator_radiomics_features_code_mapping_df[\n",
-        "                        \"pyradiomics_feature_class\"\n",
-        "                    ]\n",
-        "                    == \"firstorder\"\n",
-        "                ]\n",
-        "            )\n",
+        "                if not dicom_seg_creation_errors(series_id):\n",
         "\n",
-        "            # Create structured report meta-JSON for shape features\n",
-        "            create_structured_report_metajson_for_features(\n",
-        "                series_id,\n",
-        "                series_number,\n",
-        "                SOPInstanceUID_seg,\n",
-        "                seg_file,\n",
-        "                dicom_directory,\n",
-        "                segments_code_mapping_df,\n",
-        "                shape_features_code_mapping_df,\n",
-        "                radiomics_features,\n",
-        "            )\n",
+        "                    #radiomics features\n",
+        "                    start_time = time.time()\n",
+        "                    setup_and_trigger_extraction_of_radiomics_features_all_labels(series_id)\n",
+        "                    verify_radiomics_extraction(series_id)\n",
+        "                    radiomics_features = post_process_radiomics_features(series_id)\n",
+        "                    radiomics_time = time.time() - start_time\n",
         "\n",
-        "            # Create structured report meta-JSON for first order features\n",
-        "            create_structured_report_metajson_for_features(\n",
-        "                series_id,\n",
-        "                series_number,\n",
-        "                SOPInstanceUID_seg,\n",
-        "                seg_file,\n",
-        "                dicom_directory,\n",
-        "                segments_code_mapping_df,\n",
-        "                first_order_features_code_mapping_df,\n",
-        "                radiomics_features,\n",
-        "            )\n",
+        "                    #structured reports\n",
+        "                    start_time = time.time()\n",
+        "                    seg_dcm = dcmread(f\"itkimage2segimage/{series_id}/{series_id}.dcm\")\n",
+        "                    SOPInstanceUID_seg = seg_dcm.SOPInstanceUID\n",
+        "                    seg_file = f\"{series_id}.dcm\"\n",
+        "                    dicom_directory = f\"idc_data/{series_id}\"\n",
+        "                    segments_code_mapping_df = totalsegmentator_segments_code_mapping_df\n",
+        "                    shape_features_code_mapping_df = (\n",
+        "                        totalsegmentator_radiomics_features_code_mapping_df[\n",
+        "                            totalsegmentator_radiomics_features_code_mapping_df[\n",
+        "                                \"pyradiomics_feature_class\"\n",
+        "                            ]\n",
+        "                            == \"shape\"\n",
+        "                        ]\n",
+        "                    )\n",
+        "                    first_order_features_code_mapping_df = (\n",
+        "                        totalsegmentator_radiomics_features_code_mapping_df[\n",
+        "                            totalsegmentator_radiomics_features_code_mapping_df[\n",
+        "                                \"pyradiomics_feature_class\"\n",
+        "                            ]\n",
+        "                            == \"firstorder\"\n",
+        "                        ]\n",
+        "                    )\n",
         "\n",
-        "            # Calculate the time taken to generate structured reports\n",
-        "            structuredReportsGenerationTime = time.time() - start_time\n",
-        "            print(\n",
-        "                f\"Structured Reports Generated in {structuredReportsGenerationTime} seconds.\\n\"\n",
-        "            )\n",
+        "                    # Create structured report meta-JSON for shape features\n",
+        "                    create_structured_report_metajson_for_features(\n",
+        "                        series_id,\n",
+        "                        series_number,\n",
+        "                        SOPInstanceUID_seg,\n",
+        "                        seg_file,\n",
+        "                        dicom_directory,\n",
+        "                        segments_code_mapping_df,\n",
+        "                        shape_features_code_mapping_df,\n",
+        "                        radiomics_features,\n",
+        "                    )\n",
         "\n",
-        "            # Record the start time\n",
-        "            start_time = time.time()\n",
-        "            # Compress the files\n",
-        "            compress_files(series_id)\n",
-        "            # Calculate the time taken to archive the files\n",
-        "            archiving_time = time.time() - start_time\n",
+        "                    # Create structured report meta-JSON for first order features\n",
+        "                    create_structured_report_metajson_for_features(\n",
+        "                        series_id,\n",
+        "                        series_number,\n",
+        "                        SOPInstanceUID_seg,\n",
+        "                        seg_file,\n",
+        "                        dicom_directory,\n",
+        "                        segments_code_mapping_df,\n",
+        "                        first_order_features_code_mapping_df,\n",
+        "                        radiomics_features,\n",
+        "                    )\n",
+        "\n",
+        "                    # Calculate the time taken to generate structured reports\n",
+        "                    structuredReportsGenerationTime = time.time() - start_time\n",
+        "                    print(\n",
+        "                        f\"Structured Reports Generated in {structuredReportsGenerationTime} seconds.\\n\"\n",
+        "                    )\n",
+        "\n",
+        "                    # Record the start time\n",
+        "                    start_time = time.time()\n",
+        "                    # Compress the files\n",
+        "                    compress_files(series_id)\n",
+        "                    # Calculate the time taken to archive the files\n",
+        "                    archiving_time = time.time() - start_time\n",
+        "                else:\n",
+        "                    archiving_time = 0\n",
+        "                    radiomics_time = 0\n",
+        "                    structuredReportsGenerationTime = 0\n",
+        "            else:\n",
+        "                archiving_time = 0\n",
+        "                itkimage2segimage_time = 0\n",
+        "                radiomics_time = 0\n",
+        "                structuredReportsGenerationTime = 0\n",
         "        else:\n",
         "            total_segmentator_time = 0\n",
         "            archiving_time = 0\n",
@@ -1713,7 +1711,6 @@
         "            radiomics_time = 0\n",
         "            structuredReportsGenerationTime = 0\n",
         "    else:\n",
-        "\n",
         "        dicom_download_time=0\n",
         "        dicom_conversion_time=0\n",
         "        total_segmentator_time = 0\n",
@@ -1829,7 +1826,6 @@
       },
       "outputs": [],
       "source": [
-        "\n",
         "runtime_stats = pd.DataFrame(columns=['SeriesInstanceUID','dicom_download_time', 'dicom_conversion_time','total_segmentator_time', 'itkimage2segimage_time','radiomics_time',\n",
         "                                      'archiving_time','structuredReportsGenerationTime', 'cpu_usage','ram_usage_mb', 'ram_total_mb', 'gpu_usage_mb','gpu_total_mb','gpu_type',\n",
         "                                      'disk_usage_all', 'disk_total'\n",
