--- a/util/executionAnalytics/Notebooks/Terra-Cromwell Workflow Metadata.ipynb
+++ b/util/executionAnalytics/Notebooks/Terra-Cromwell Workflow Metadata.ipynb
@@ -7,7 +7,7 @@
         "id": "view-in-github"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/CloudSegmentator/blob/main/util/executionAnalytics/Notebooks/Terra-Cromwell%20Workflow%20Metadata.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/CloudSegmentator/blob/v1.3.0/util/executionAnalytics/Notebooks/Terra-Cromwell%20Workflow%20Metadata.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
